[package]
name = "ic-artifact-pool"
version = "0.8.0"
authors = ["The Internet Computer Project Developers"]
edition = "2018"

[dependencies]
bincode = "1.2.1"
byteorder = "1.3.4"
clap = "2.33.3"
ic-config = { path = "../config" }
ic-consensus-message = { path = "../consensus/message" }
ic-crypto = { path = "../crypto" }
ic-interfaces = { path = "../interfaces" }
ic-logger = { path = "../monitoring/logger" }
ic-metrics = { path = "../monitoring/metrics" }
ic-protobuf = { path = "../protobuf" }
ic-types = { path = "../types/types" }
ic-utils = { path = "../utils" }
lazy_static = "1.4.0"
phantom_newtype = { path = "../phantom_newtype" }
prometheus = { version = "0.12.0", features = [ "process" ] }
lmdb-rkv = { git = "https://github.com/psychedelic/lmdb-rs", rev = "3625787a1205379080869221a05583111c90164c" }
prost = "0.9.0"
serde = { version = "1.0.99", features = [ "derive" ] }
serde_json = "1.0.40"
serde-bytes-repr = "0.1.5"
slog = { version = "2.5.2", features = ["nested-values", "max_level_trace", "release_max_level_debug"] }
slog-scope = "4.1.2"
tempfile = "3.1.0"
lmdb-rkv-sys = { git = "https://github.com/psychedelic/lmdb-rs", rev = "3625787a1205379080869221a05583111c90164c" }
nix = "0.23.0"

[dev-dependencies]
criterion = "0.3"
ic-test-artifact-pool = { path = "../test_utilities/artifact_pool" }
ic-test-utilities = { path = "../test_utilities" }
slog-term = "2.6.0"
slog-envlogger = "2.2.0"
slog-async = "2.5.0"
tempfile = "3.1.0"
rand = "0.4.6"

[dependencies.rocksdb]
version = "0.15.0"
optional = true
default-features = false
features = ["lz4"]

[[bench]]
name = "load_blocks"
harness = false

[features]
default = ["rocksdb"]

[[bin]]
name = "ic-consensus-pool-util"
path = "src/bin/consensus_pool_util.rs"
