[package]
name = "ic-sys"
version = "0.8.0"
edition = "2018"

[dependencies]
hex = "0.4.2"
ic-crypto-sha = { path = "../crypto/sha" }
lazy_static = "1.4.0"
libc = "0.2.91"
nix = "0.23.0"
wsl = "0.1.0"
phantom_newtype = { path = "../phantom_newtype" }
page_size = "0.4.2"
memmap = "0.7.0"

[dev-dependencies]
tempfile = "3.1.0"
